--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,3 +1,7 @@
+<!--
+ Copyright (C) 2009-2010 Aubort Jean-Baptiste (Rorist)
+ Licensed under GNU's GPL 2, see README
+-->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
