Add translation for Info/Ports buttons

--- a/res/layout/list_host.xml
+++ b/res/layout/list_host.xml
@@ -20,26 +20,14 @@
         android:text="List"
         android:focusable="false"
         android:focusableInTouchMode="false" />
-
-    <!--    <CheckBox-->
-    <!--        android:id="@+id/list"-->
-    <!--        android:layout_width="0dip"-->
-    <!--        android:layout_height="fill_parent"-->
-    <!--        android:layout_weight="1"-->
-    <!--        android:paddingLeft="42dip"-->
-    <!--        android:textSize="12dip"-->
-    <!--        android:typeface="monospace"-->
-    <!--        android:text="List"-->
-    <!--        android:focusable="false"-->
-    <!--        android:focusableInTouchMode="false" />-->
     <Button
         android:id="@+id/list_info"
-        android:text="Info"
+        android:text="@string/btn_info"
         android:drawableLeft="@drawable/info"
         style="@style/ButtonList" />
     <Button
         android:id="@+id/list_port"
-        android:text=" Ports"
+        android:text="@string/btn_ports"
         android:drawableLeft="@drawable/firewall"
         style="@style/ButtonList" />
 </LinearLayout>
